2008-05-27  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Tim Hatcher.

        Fixed https://bugs.webkit.org/show_bug.cgi?id=19183
        REGRESSION (r33979): Crash in DebuggerCallFrame::functionName when
        clicking button in returnEvent-crash.html
        
        Added implementations for willExecuteProgram and didExecuteProgram. They
        take care to update our call frame when entering and exiting programs,
        preventing us from keeping around a stale global frame after executing
        a program.
        
        eval programs now show up as "anonymous function" in a new scope. This
        is slightly better than what they used to do -- overwriting the current
        scope -- but obviously we can do better.

2008-05-28  Brady Eidson  <beidson@apple.com>

        Reviewed by Dan Bernstein

        <rdar://problem/5946834> - LocalStorage threads appearing in apps that don't want them.

        Decided to fix this bug from a few different avenues to make sure we only create LocalStorage resources
        when we *really* want them.

        * page/DOMWindow.cpp:
        (WebCore::DOMWindow::localStorage): Account for the possibility that the LocalStorage object might be null.

        * storage/LocalStorage.cpp:
        (WebCore::LocalStorage::LocalStorage): Don't create the thread if there is no path name - we know we'll never
          be needing it when there is no file backing us on disk.
        (WebCore::LocalStorage::scheduleImport): Null check the thread, as it might not exist.
        (WebCore::LocalStorage::scheduleSync): Ditto

        * storage/LocalStorageThread.cpp:
        (WebCore::LocalStorageThread::localStorageThread): Clear the threadID after termination - clear way to signify
          that this thread is truly done.
        (WebCore::LocalStorageThread::scheduleImport): ASSERT that the queue is live, and the threadID exists
        (WebCore::LocalStorageThread::scheduleSync): Ditto